--- a/main.css
+++ b/main.css
@@ -1,5 +1,5 @@
 html {
-    background-color: #e6e9e9;
+    background-color: #acdede;
     background-image: -webkit-linear-gradient(270deg,rgb(230,233,233) 0%,rgb(216,221,221) 100%);
     background-image: linear-gradient(270deg,rgb(230,233,233) 0%,rgb(216,221,221) 100%);
     -webkit-font-smoothing: antialiased;
@@ -7,11 +7,11 @@ html {
 
 body {
     margin: 0 auto;
-    padding: 2em 2em 4em;
+    padding: 2em 3em 5em;
     max-width: 800px;
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
     font-size: 16px;
-    line-height: 1.5em;
+    line-height: 1.1em;
     color: #545454;
     background-color: #ffffff;
     box-shadow: 0 0 2px rgba(0, 0, 0, 0.06);
